crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__empty_app_header_header_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "app \"test-app\" packages {} imports [] provides [] to blah\n\n"
---
(BeginFile
    (BeginHeaderApp
        String=>String@1
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
        Ident=>LowerIdent@12
    EndHeaderApp)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

