crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__empty_hosted_header_header_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "hosted Foo exposes [] imports [] generates Bar with []\n\n"
---
(BeginFile
    (BeginHeaderHosted
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
    EndHeaderHosted)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

