crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__empty_interface_header_header.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "interface Foo exposes [] imports []\n\n"
---
(BeginFile
    (BeginHeaderInterface
        ModuleName=>UpperIdent@1
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
    EndHeaderInterface)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

