crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__empty_list_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "[]\n"
---
(BeginTopLevelDecls HintExpr (BeginList EndList) EndTopLevelDecls)

[=== canfmt below ===]
List([])

[=== formatted below ===]

