crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__empty_package_header_header.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "package \"rtfeldman/blah\" exposes [] packages {}\n"
---
(BeginFile
    (BeginHeaderPackage
        String=>String@1
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
    EndHeaderPackage)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

