crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__empty_platform_header_header_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "platform \"rtfeldman/blah\" requires {} { main : {} } exposes [] packages {} imports [] provides []\n\n"
---
(BeginFile
    (BeginHeaderPlatform
        (BeginCollection EndCollection)
        (BeginCollection Ident=>LowerIdent@6 EndCollection)
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
    EndHeaderPlatform)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

