crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__empty_record_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "{}\n"
---
(BeginTopLevelDecls HintExpr (BeginRecord EndRecord) EndTopLevelDecls)

[=== canfmt below ===]
Record([])

[=== formatted below ===]

