crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__empty_string_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "\"\"\n\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr String=>String@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
String("\"\"")

[=== formatted below ===]

