crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__equals_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "x == y\n"
---
(BeginTopLevelDecls
    (*
        HintExpr
        Ident=>LowerIdent@0
        InlineBinOpEquals=>OpEquals@1
        Ident=>LowerIdent@2
    EndBinOpEquals)
EndTopLevelDecls)

[=== canfmt below ===]
BinOp(Ident("x"), Equals, Ident("y"))

[=== formatted below ===]

